fixing image thumbnails are sometimes incorrectly cropped

--- a/scss/main/_item_preview.scss
+++ b/scss/main/_item_preview.scss
@@ -129,6 +129,8 @@
 
 		img {
 			position: absolute;
+			height: 100%;
+
 			.en & {
 				right: 0px;
 			}
